@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-22T00:57:39Z",
+  "timestamp" : "2023-07-22T08:11:16Z",
   "count_outdated" : 2598,
   "uniques_outdated" : 984,
-  "count" : 2626,
-  "uniques" : 999,
+  "count" : 2627,
+  "uniques" : 1000,
   "clones" : [
     {
       "timestamp": "2023-07-08T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
